ResultAblationNoWP/acsl-algorithms/openPangu-Embedded-7B-V1.1/_bst_search.c/_bst_search_verified_3.txt
/root/data1/wgy/algorithm-new/ResultAblationclear/acsl-algorithms/openPangu-Embedded-7B-V1.1/_bst_search.c/_bst_search_verified_3.c:30:29: error: unterminated comment
   30 |         loop invariant i_4: /*@ \exists Node *cur; cur == root && (\invalid(cur) || (cur->left == \null || cur->left->key <= key) && (cur->right == \null || cur->right->key >= key));
      |                             ^
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics
